--- a/src/styling/Footer.css
+++ b/src/styling/Footer.css
@@ -49,6 +49,48 @@
   background-color: gray;
 }
 
+.nav-link{
+  text-decoration: none;
+}
 
+.social-icons {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.social-icon {
+  font-size: 24px;
+  color: #333; 
+  transition: color 0.3s;
+}
+
+.social-icon:hover {
+  color: #1877f2; 
+}
+
+.gallery-images {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.gallery-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.gallery-images img {
+  max-width: 20%;
+  height: auto;
+}
+
+.gallery-subheading {
+  font-size: 0.8rem;
+  color: #666;
+}
 
 
